updating spacing issues based on navbar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,7 @@ h1 {
 .nav-item {
     font-size: 1.2rem;
     margin: 0 4.5% 0 0;
+    margin-top: -10%;
 }
 
 .btn-custom {
@@ -56,10 +57,10 @@ h1 {
 }
 
 .titleName {
-    padding-top: 50%; 
+    padding-top: 30%; 
     font-family: 'Poppins', sans-serif;
     color: rgb(255, 255, 255);
-    font-size: 4.3rem;
+    font-size: 3.5rem;
     padding-bottom: 2%;
 }
 
@@ -215,25 +216,19 @@ h1 {
 .accomodations-title {
     padding: 4% 4% 4% 4%; 
     text-align: center;
-    max-width: 450px;
-    font-family: Montserrat;
+    max-width: 800px;
     color: rgb(255, 255, 255);
-    font-size: 1.5rem;
     background-color: rgba(29, 92, 99, .7);  
     backdrop-filter: blur(10px);
 }
 
 .titling-body-accomodations {
-    margin-top: 20%;
+    margin-top: 15%;
 }
 
 .generalDescription {
     text-align: center;
     padding: 6% 15%;
-}
-
-.titling-body {
-    margin-top: 10%;
 }
 
 .description {
@@ -283,7 +278,7 @@ h1 {
 }
 
 .about-title {
-    margin-top: 60%; 
+    margin-top: 50%; 
     padding-top: 5%;
     padding-bottom: 5%;  
     text-align: center;
@@ -347,6 +342,10 @@ h1 {
     background-repeat: no-repeat;
     height: auto;  
     max-width: 100%; 
+}
+
+.titling-body {
+    margin-top: 15%;
 }
 
 .first-amenity {
@@ -460,12 +459,13 @@ h1 {
 
 .map-back {
     background-color: #417D7A;
+    padding-bottom: 5%; 
 }
 
 .mapText {
     text-align: center;  
     color: white; 
-    padding-bottom: 2%;
+    padding-bottom: 10%;
 }
 
 .amenitiesText {
@@ -495,11 +495,13 @@ h1 {
 }
 
 .titleAmenities {
-    padding: 3% 3% 3% 3%; 
-    margin-top: 20%; 
+    padding-left: 3%; 
+    padding-right: 3%; 
+    padding-bottom: 5%; 
+    padding-top: 5%; 
+    margin-top: 10%; 
     text-align: center;
     max-width: 500px;
-    font-family: Montserrat;
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
     background-color: rgba(29, 92, 99, .7);  
@@ -508,7 +510,8 @@ h1 {
 }
 
 .luxAmen {
-    font-weight: 10;   
+    font-weight: 10;  
+    font-family: 'Poppins';  
 }
 
 .colored {
@@ -538,7 +541,7 @@ h1 {
 }
 
 .title-reserve {
-    margin-top: 60%; 
+    margin-top: 50%; 
     padding-top: 5%;
     padding-bottom: 5%;  
     text-align: center;
